--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
         uses: "actions/checkout@v4"
       - name: "[SETUP] SSH Key"
         run: |
+          mkdir ssh-keys
           echo "${{ secrets.SSH_KEY }}" > ssh-keys/key
       - name: "[SETUP] go"
         uses: "actions/setup-go@v4"
